fixed "hero" issue where it overlapped with the header

--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ body, html {
     font-size: larger;
     font-weight: bolder;
     background-image: image();
+    margin-top: 100px;
   }
   .benefits-grid ul {
     display: grid;
